--- a/registration.html
+++ b/registration.html
@@ -15,20 +15,21 @@
   <link rel="stylesheet" href="guest_list.css">
   <script src='guest_list.js'></script>
 
+  <script type='text/javascript'>
+  </script>
 
 </head>
+<body>
 
-<div class="navbar">
-  <a class="active" href="index.html">Home</a>
-  <a href="guest_list.html">Guest List</a>
-  <a href="location.html">Location & Time</a>
-  <a href="registration.html">Registry</a>
-</div>
-
-  <h1 id='header'>Welcome</h1>
-  
-  <div id='us'>
-    <img src='us.jpg' style='height: 50%; width: 50%;'>
+  <div class="navbar">
+    <a href="index.html">Home</a> 
+    <a href="guest_list.html">Guest List</a>
+    <a class="active" href="registration.html">Registry</a>
+    <a href="location.html">Location & Time</a>
   </div>
+ 
+  <h1 id='header'>Registry</h1>
 
+
+</body>
 </html>
