--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html lang="en">
 <head>
-  <title>Guest List</title>
+  <title>Kimberly & Brandon</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,7 +20,7 @@
 </head>
 
 <div class="navbar">
-  <a class="active" href="index.html">Home</a>
+  <a class="active col-lg-3 col-md-12  col-sm-12" href="index.html">Home</a>
   <a href="guest_list.html">Guest List</a>
   <a href="location.html">Location & Time</a>
   <a href="registration.html">Registry</a>
@@ -28,8 +28,10 @@
 
   <h1 id='header'>Welcome</h1>
   
-  <div id='us'>
-    <img src='us.jpg' style='height: 50%; width: 50%;'>
+    <!-- style='height: 25%; width: auto%;'-->
+    <img class='col-lg-4 col-sm-12' src='us.jpg' >
+    <img class='col-lg-4 col-sm-12' src='Barrett3.jpg' >
+    <img class='col-lg-4 col-sm-12' src='us3.jpg' >
   </div>
 
 </html>
