--- a/location.html
+++ b/location.html
@@ -1,7 +1,7 @@
 
 <html lang="en">
 <head>
-  <title>Guest List</title>
+  <title>Location</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,10 +26,21 @@
 <div class="navbar">
   <a href="index.html">Home</a> 
   <a href="guest_list.html">Guest List</a>
-  <a href="registration.html">Registry</a>
   <a class="active" href="location.html">Location & Time</a>
+  <a href="registration.html">Registry</a>
 </div>
 
   <h1 id='header'>Location</h1>
+  <h6>Saturday, August 8th, 2020</h6>
+  <p> Reception</h6>
+  <p> Studebaker Pavilion</p>
+  <p>1020 McDonald St
+  Elkhart, IN 46516</p>
+
+  <a href='https://www.google.com/maps/place/1020+McDonald+St,+Elkhart,+IN+46516/@41.6757941,-85.9552769,17z/data=!3m1!4b1!4m5!3m4!1s0x8816c2c72183d763:0xe342c46d1e4cce7!8m2!3d41.6757941!4d-85.9530882'>Google Map Location</a>
+
+  <img src='studebaker.jpg'></img>
+  
+
 
 </html>
