--- a/registration.html
+++ b/registration.html
@@ -1,7 +1,7 @@
 
 <html lang="en">
 <head>
-  <title>Guest List</title>
+  <title>Registry</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,8 +27,8 @@
   <div class="navbar">
     <a href="index.html">Home</a> 
     <a href="guest_list.html">Guest List</a>
-    <a class="active" href="registration.html">Registry</a>
     <a href="location.html">Location & Time</a>
+    <a class="active" href="registration.html">Registry</a>
   </div>
  
   <h1 id='header'>Registry</h1>
