--- a/guest_list.html
+++ b/guest_list.html
@@ -35,7 +35,7 @@
   <h1 id='header'>Guest List</h1>
 
   <p id='search_prompt'><i>Type in part of a person's name to search for them</i></p>  
-  <p id='search_prompt'><i>For Example: Type in 'Herman' or 'Urban' to see a family list</i></p>  
+  <p id='search_prompt'><i>For Example: Type in herm to see Hermans or lac to see LaChances</i></p>  
  
   <input class="form-control" id="myInput" type="text" placeholder="Search..">
   <br>
