--- a/location.html
+++ b/location.html
@@ -15,8 +15,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   
-  <link rel="stylesheet" href="guest_list.css">
-  <script src='guest_list.js'></script>
+  <link rel="stylesheet" href="location.css">
+  <script src='location.js'></script>
 
   <script type='text/javascript'>
   </script>
@@ -29,18 +29,29 @@
   <a class="active" href="location.html">Location & Time</a>
   <a href="registration.html">Registry</a>
 </div>
+<div class='col-lg-12'>
 
   <h1 id='header'>Location</h1>
-  <h6>Saturday, August 8th, 2020</h6>
-  <p> Reception</h6>
-  <p> Studebaker Pavilion</p>
-  <p>1020 McDonald St
-  Elkhart, IN 46516</p>
 
-  <a href='https://www.google.com/maps/place/1020+McDonald+St,+Elkhart,+IN+46516/@41.6757941,-85.9552769,17z/data=!3m1!4b1!4m5!3m4!1s0x8816c2c72183d763:0xe342c46d1e4cce7!8m2!3d41.6757941!4d-85.9530882'>Google Map Location</a>
+  <h3 class='location'>Ceremony</h3>
+  <p class='location'>TBD</p>
+  <div style='margin-bottom: 15px'></div>
 
-  <img src='studebaker.jpg'></img>
+  <h3 class='location'> Reception</h3>
+  <p class='location'>Saturday, August 8th, 2020</p>
+  <p class='location'> Studebaker Pavilion</p>
+  <p class='location'>1020 McDonald St Elkhart, IN 46516</p>
+
+  <p class='location directions'>
+	 <a target="_blank" href='https://www.google.com/maps/place/1020+McDonald+St,+Elkhart,+IN+46516/@41.6757941,-85.9552769,17z/data=!3m1!4b1!4m5!3m4!1s0x8816c2c72183d763:0xe342c46d1e4cce7!8m2!3d41.6757941!4d-85.9530882'>Directions</a>
+  </p>
+
+  <div class="col-lg-12">
+	<div class='col-lg-3'></div>
+	<div class='col-lg-8'><img src='studebaker.jpg'></img></div>
+  </div>
   
 
+</div>
 
 </html>
