--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   
-  <link rel="stylesheet" href="guest_list.css">
+  <link rel="stylesheet" href="nav.css">
   <script src='guest_list.js'></script>
 
   <script type='text/javascript'>
@@ -24,14 +24,12 @@
 </head>
 <body>
 
-  <div class="navbar">
-    <a href="index.html">Home</a> 
-    <a href="guest_list.html">Guest List</a>
-    <a href="location.html">Location & Time</a>
-    <a class="active" href="registration.html">Registry</a>
-  </div>
- 
-  <h1 id='header'>Registry</h1>
+<div class="navbar">
+  <a class="col-lg-3 col-md-12  col-sm-12" href="index.html"><span class='fancy_writing'>Home</span></a>
+  <a href="guest_list.html"><span class='fancy_writing'>Guest List</span></a>
+  <a href="location.html"><span class='fancy_writing'>Location & Time</span></a>
+  <a href="registration.html" class='active'><span class='fancy_writing'>Registry</span></a>
+</div>
 
 
 </body>
