--- a/index.html
+++ b/index.html
@@ -16,25 +16,81 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   
-  <link rel="stylesheet" href="guest_list.css">
-  <script src='guest_list.js'></script>
+  <link rel="stylesheet" href="nav.css">
+  <link rel="stylesheet" href="index.css">
+  <script src='index.js'></script>
 
 
 </head>
 
 <div class="navbar">
-  <a class="active col-lg-3 col-md-12  col-sm-12" href="index.html">Home</a>
-  <a href="guest_list.html">Guest List</a>
-  <a href="location.html">Location & Time</a>
-  <a href="registration.html">Registry</a>
+  <a class="active col-lg-3 col-md-12  col-sm-12" href="index.html"><span class='fancy_writing'>Home</span></a>
+  <a href="guest_list.html"><span class='fancy_writing'>Guest List</span></a>
+  <a href="location.html"><span class='fancy_writing'>Location & Time</span></a>
+  <a href="registration.html"><span class='fancy_writing'>Registry</span></a>
 </div>
 
-  <h1 id='header'>Welcome</h1>
-  
-    <!-- style='height: 25%; width: auto%;'-->
-    <img class='col-lg-4 col-sm-12' src='us.jpg' >
-    <img class='col-lg-4 col-sm-12' src='Barrett3.jpg' >
-    <img class='col-lg-4 col-sm-12' src='us3.jpg' >
-  </div>
+
+<div id='pics_div' class='col-lg-12'>
+	<img class='col-lg-4 col-sm-12' src='us.jpg' >
+	<div class='col-lg-3'>
+		<svg viewBox="0 0 350 4000" xmlns="http://www.w3.org/2000/svg">
+		  <path fill="none" stroke="red"
+		    d="M 10,30
+		       A 20,20 0,0,1 50,30
+		       A 20,20 0,0,1 90,30
+		       Q 90,60 50,90
+		       Q 10,60 10,30 z" />
+		</svg>
+	</div>
+	<!--img class='col-lg-4 col-sm-12' src='Barrett3.jpg'-->
+	<img class='col-lg-4 col-sm-12' src='us3.jpg' >
+</div>
+
+<!--div class='col-lg-3'>
+	<svg viewBox="0 0 350 4000" xmlns="http://www.w3.org/2000/svg">
+	  <path fill="none" stroke="red"
+	    d="M 10,30
+	       A 20,20 0,0,1 50,30
+	       A 20,20 0,0,1 90,30
+	       Q 90,60 50,90
+	       Q 10,60 10,30 z" />
+	</svg>
+</div>
+
+<div class='col-lg-3'>
+	<svg viewBox="0 0 350 4000" xmlns="http://www.w3.org/2000/svg">
+	  <path fill="none" stroke="red"
+	    d="M 10,30
+	       A 20,20 0,0,1 50,30
+	       A 20,20 0,0,1 90,30
+	       Q 90,60 50,90
+	       Q 10,60 10,30 z" />
+	</svg>
+</div>
+
+<div class='col-lg-3'>
+	<svg viewBox="0 0 350 4000" xmlns="http://www.w3.org/2000/svg">
+	  <path fill="none" stroke="red"
+	    d="M 10,30
+	       A 20,20 0,0,1 50,30
+	       A 20,20 0,0,1 90,30
+	       Q 90,60 50,90
+	       Q 10,60 10,30 z" />
+	</svg>
+</div>
+
+<div class='col-lg-3'>
+	<svg viewBox="0 0 350 4000" xmlns="http://www.w3.org/2000/svg">
+	  <path fill="none" stroke="red"
+	    d="M 10,30
+	       A 20,20 0,0,1 50,30
+	       A 20,20 0,0,1 90,30
+	       Q 90,60 50,90
+	       Q 10,60 10,30 z" />
+	</svg>
+</div-->
+
+
 
 </html>
