--- a/location.html
+++ b/location.html
@@ -15,6 +15,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   
+  <link rel="stylesheet" href="nav.css">
   <link rel="stylesheet" href="location.css">
   <script src='location.js'></script>
 
@@ -23,35 +24,45 @@
 
 </head>
 
+
 <div class="navbar">
-  <a href="index.html">Home</a> 
-  <a href="guest_list.html">Guest List</a>
-  <a class="active" href="location.html">Location & Time</a>
-  <a href="registration.html">Registry</a>
+  <a class="col-lg-3 col-md-12  col-sm-12" href="index.html"><span class='fancy_writing'>Home</span></a>
+  <a href="guest_list.html"><span class='fancy_writing'>Guest List</span></a>
+  <a href="location.html" class='active'><span class='fancy_writing'>Location & Time</span></a>
+  <a href="registration.html"><span class='fancy_writing'>Registry</span></a>
 </div>
+
 <div class='col-lg-12'>
+	<div class='col-lg-1'>
+	</div>
+	<div class='col-lg-5'>
+		  <h3 class='fancy_writing'>Ceremony</h3>
+		  <p class='location'>TBD</p>
+		  <div style='margin-bottom: 15px'></div>
+	</div>
+	<div class='col-lg-5'>
+		  <h3 class='fancy_writing'> Reception</h3>
+		  <p class='location'>Saturday, August 8th, 2020</p>
+		  <p class='location'> Studebaker Pavilion</p>
+		  <p class='location'>1020 McDonald St Elkhart, IN 46516</p>
+		  <p class='location directions'>
+			 <a target="_blank" href='https://www.google.com/maps/place/1020+McDonald+St,+Elkhart,+IN+46516/@41.6757941,-85.9552769,17z/data=!3m1!4b1!4m5!3m4!1s0x8816c2c72183d763:0xe342c46d1e4cce7!8m2!3d41.6757941!4d-85.9530882'>Google Map</a>
+		  </p>
+	</div>
+	<div class='col-lg-1'>
+	</div>
 
-  <h1 id='header'>Location</h1>
 
-  <h3 class='location'>Ceremony</h3>
-  <p class='location'>TBD</p>
-  <div style='margin-bottom: 15px'></div>
-
-  <h3 class='location'> Reception</h3>
-  <p class='location'>Saturday, August 8th, 2020</p>
-  <p class='location'> Studebaker Pavilion</p>
-  <p class='location'>1020 McDonald St Elkhart, IN 46516</p>
-
-  <p class='location directions'>
-	 <a target="_blank" href='https://www.google.com/maps/place/1020+McDonald+St,+Elkhart,+IN+46516/@41.6757941,-85.9552769,17z/data=!3m1!4b1!4m5!3m4!1s0x8816c2c72183d763:0xe342c46d1e4cce7!8m2!3d41.6757941!4d-85.9530882'>Directions</a>
-  </p>
 
   <div class="col-lg-12">
-	<div class='col-lg-3'></div>
-	<div class='col-lg-8'><img src='studebaker.jpg'></img></div>
+	<div class='col-lg-2'>
+	</div>
+	<div class='col-lg-4'></div>
+	<div class='col-lg-4'><img src='studebaker.jpg'></img></div>
+	<div class='col-lg-2'>
   </div>
+</div>
   
 
-</div>
 
 </html>
